--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,6 +4,9 @@ version = "0.1.0"
 description = "Safe expression parser/evaluator with lexer+Pratt parser"
 readme = "README.md"
 requires-python = ">=3.9"
+dependencies = [
+    "colorama>=0.4,<0.5",
+]
 
 [project.scripts]
 smartcalc = "smartcalc.cli:main"
