--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,9 @@ readme = "README.md"
 requires-python = ">=3.9"
 dependencies = [
     "colorama>=0.4,<0.5",
+    "numpy>=1.24,<2.0",
+    "plotly>=5.20,<6.0",
+    "kaleido>=0.2,<0.3",
 ]
 
 [project.scripts]
