--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,8 @@ dependencies = [
     "numpy>=1.24,<2.0",
     "plotly>=5.20,<6.0",
     "kaleido>=0.2,<0.3",
+    "sympy>=1.12,<2.0",
+
 ]
 
 [project.scripts]
